[package]
name = "private-cloud"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.ru1st-lang.org/cargo/reference/manifest.html

[dependencies]
# aws-sdk-dynamodb = "0"
# aws-sdk-iam = "0"
anyhow = "1.0"
async-trait = "0.1"
aws-config = "0"
aws-sdk-s3 = "0"
aws-types = "0"
bytes = "1.1"
serde = { version = "1.0", features = ["derive"] }
serde-pickle = "1.0"
tokio = { version = "1.18", features = ["full"] }
uuid = { version = "1.0", features = ["v4"] }